# ComfyUI-RR-JointTagger

./: .gitignore  CHANGELOG.md  CONFIGURING.md  CONTRIBUTING.md  JTP-3-Hydra_Features.md  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
helpers/: cache.py  config.py  extension.py  files.py  http.py  logger.py  metaclasses.py  multithreading.py  nodes.py
nodes/: __init__.py  fdtagger.py  rrfurrence2.py  rrtagger.py  rrtagger_dino.py  rrtagger_v3.py  rrtagops.py
redrocket/: cap_furrence2_manager.py  classifier.py  classifier_dino.py  classifier_v3.py  configuration_florence2.py  dinov3_backbone.py  furrence2_pipeline.py  glu.py  hydra_pool.py  image_dino_manager.py  image_manager.py  image_v3_manager.py  model_dino_manager.py  model_furrence2_manager.py  model_manager.py  model_v3_manager.py  modeling_florence2.py  processing_florence2.py  siglip2.py  tag_dino_manager.py  tag_manager.py  tag_v3_manager.py
tags/: JTP_PILOT2-e3-vit_so400m_patch14_siglip_384.json
web/js/: fdtagger.js
