[project]
name = "ComfyUI-RR-JointTagger"
description = "Tagger used to tag image of but not limited to furry art."
version = "0.3.1"
license = "LICENSE"
dependencies = ["torch", "torchvision", "pillow", "requests", "comfyui", "aiohttp", "numpy", "msgspec", "timm>=1.0.16", "einops"]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI-RR-JointTagger"

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI-RR-JointTagger"
Icon = ""
