[project]
name = "ComfyUI-RR-JointTagger"
description = "Tagger used to tag image of but not limited to furry art."
version = "0.5.0"
license = {file = "LICENSE"}
dependencies = ["torchvision", "pillow", "requests", "aiohttp", "numpy", "msgspec", "timm>=1.0.16", "einops", "unifiedefficientloader"]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI-RR-JointTagger"

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI-RR-JointTagger"
Icon = ""
